--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -3,6 +3,8 @@ name: C/C++ CI
 on:
   # Make sure that settings are set to require permission
   # to run workflows by external contributors!
+  push:
+    branches: [ "*" ]
   pull_request:
     branches: ["main"]
 
